<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomersRatingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/skills_person_rating"
            android:textSize="26sp"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/important_text_ratings"
            android:textSize="12sp"
            android:padding="10dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/skills_person_service_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="22sp"
            android:hint="@string/ratings_skills_person_service_number"
            android:padding="5dp"
            android:background="@drawable/input_bg"
            android:importantForAutofill="no"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/customers_rating_rate"
            android:textSize="16sp"
            android:padding="10dp"/>

        <RatingBar
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:progressTint="@color/colorPrimary"
            android:padding="5dp"
            android:numStars="5"/>

        <!--<TextClock
            android:id="@+id/created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:padding="5dp"
            android:background="@drawable/input_bg"/>-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="75dp"
            android:layout_marginLeft="55dp"
            android:background="@color/colorDanger"
            android:textColor="#FFF"
            android:onClick="reset"
            android:text="@string/messages_reset"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-124dp"
            android:layout_marginBottom="75dp"
            android:layout_marginLeft="215dp"
            android:background="@color/colorGo"
            android:textColor="#FFF"
            android:onClick="submit"
            android:text="@string/messages_submit"/>

    </LinearLayout>

</ScrollView>